--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -24,7 +24,7 @@ jobs:
         curl -OJL $LATEST_ZERO_DOWNLOAD_URL
         tar -xvf "./${ZERO_BINARY_FILE_NAME}"
         ./zero version
-        echo "::add-path::${GITHUB_WORKSPACE}/bin"
+        echo "${GITHUB_WORKSPACE}/bin" >> $GITHUB_PATH
     - name: Copy test project structure
       id: copy_test_dir
       run: |
