--- a/templates/kubernetes/terraform/modules/kubernetes/files/kratos-values.yml
+++ b/templates/kubernetes/terraform/modules/kubernetes/files/kratos-values.yml
@@ -1,6 +1,6 @@
 image:
   repository:  oryd/kratos
-  # tag: v0.4.6-alpha.1-sqlite
+  tag: v0.5.4-alpha.1-sqlite
   pullPolicy: IfNotPresent
 
 ingress:
@@ -25,6 +25,12 @@ ingress:
       - paths: ["/"]
     tls:
       - secretName: kratos-admin-tls-secret
+
+# To set up OIDC you can uncomment this and create a secret which contains the
+# OIDC provider configuration in JSON format in an env var called SELFSERVICE_METHODS_OIDC
+# See README.md for more info
+# deployment:
+  # environmentSecretsName: secretName
 
 kratos:
   development: false
@@ -82,26 +88,13 @@ kratos:
       default_schema_url: file:///etc/config/identity.default.schema.json
 
     selfservice:
+      # To set up OIDC (Github, Google login, etc.) the 'oidc' method section can be provided via env var, see the deployment section above
       methods:
         # TODO: Look in to error when this is enabled
         # link:
           # enabled: true
         password:
           enabled: true
-        oidc: # TODO: allow methods to be configured with parameters
-          enabled: true
-          # config:
-          # TODO: use SELFSERVICE_METHODS_OIDC_CONFIG_PROVIDERS to set via secrets
-          # [{"id":"github","provider":"github","client_id":"id","client_secret":"secret","mapper_url":"http://zombism.ca/github.data-mapper.jsonnet","scope":["user:email"]}]
-            # providers:
-            #   - id: github
-            #     provider: github
-            #     client_id: # TODO: load secret
-            #     client_secret: # TODO : load secret
-            #     # TODO: Change to static or deploy somewhere within infra
-            #     mapper_url: http://zombism.ca/github.data-mapper.jsonnet
-            #     scope:
-            #       - user:email
 
       default_browser_return_url: / # Overridden by user_auth.tf
       whitelisted_return_urls:
