keep use terraform version 0.13.5 to fix error with 0.14.x

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: 0.13.5
 
     - name: Install Zero
       id: install_zero
