fix: Changed fluentd config to prevent excess logging from the daemonset pods

--- a/templates/kubernetes/terraform/modules/kubernetes/logging/cloudwatch/files/systemd.conf
+++ b/templates/kubernetes/terraform/modules/kubernetes/logging/cloudwatch/files/systemd.conf
@@ -2,13 +2,17 @@
     @type systemd
     @id in_systemd_kubelet
     @label @systemd
-    filters [{ "_SYSTEMD_UNIT": "kubelet.service" }]
+    matches [{ "_SYSTEMD_UNIT": "kubelet.service" }]
     <entry>
-    field_map {"MESSAGE": "message", "_HOSTNAME": "hostname", "_SYSTEMD_UNIT": "systemd_unit"}
-    field_map_strict true
+      field_map {"MESSAGE": "message", "_HOSTNAME": "hostname", "_SYSTEMD_UNIT": "systemd_unit"}
+      field_map_strict true
     </entry>
+    <storage>
+      @type local
+      persistent true
+      path /var/log/fluentd-journald-kubelet.pos
+    </storage>
     path /var/log/journal
-    pos_file /var/log/fluentd-journald-kubelet.pos
     read_from_head true
     tag kubelet.service
 </source>
@@ -17,13 +21,17 @@
     @type systemd
     @id in_systemd_kubeproxy
     @label @systemd
-    filters [{ "_SYSTEMD_UNIT": "kubeproxy.service" }]
+    matches [{ "_SYSTEMD_UNIT": "kubeproxy.service" }]
     <entry>
     field_map {"MESSAGE": "message", "_HOSTNAME": "hostname", "_SYSTEMD_UNIT": "systemd_unit"}
     field_map_strict true
     </entry>
+    <storage>
+      @type local
+      persistent true
+      path /var/log/fluentd-journald-kubeproxy.pos
+    </storage>
     path /var/log/journal
-    pos_file /var/log/fluentd-journald-kubeproxy.pos
     read_from_head true
     tag kubeproxy.service
 </source>
@@ -32,13 +40,17 @@
     @type systemd
     @id in_systemd_docker
     @label @systemd
-    filters [{ "_SYSTEMD_UNIT": "docker.service" }]
+    matches [{ "_SYSTEMD_UNIT": "docker.service" }]
     <entry>
     field_map {"MESSAGE": "message", "_HOSTNAME": "hostname", "_SYSTEMD_UNIT": "systemd_unit"}
     field_map_strict true
     </entry>
+    <storage>
+      @type local
+      persistent true
+      path /var/log/fluentd-journald-docker.pos
+    </storage>
     path /var/log/journal
-    pos_file /var/log/fluentd-journald-docker.pos
     read_from_head true
     tag docker.service
 </source>
