--- a/zero-module.yml
+++ b/zero-module.yml
@@ -66,6 +66,11 @@ parameters:
     options:
       - "postgres"
       - "mysql"
+  - field: cacheStore
+    label: Cache store to use (redis)
+    options:
+      - "redis"
+      - "memcached"
   - field: loggingType
     label: Application logging to configure. Cloudwatch is cheaper with a more limited feature set. Elasticsearch + Kibana will set up more infrastructure but enable a much richer logging search and visualization experience.
     options:
