--- a/zero-module.yml
+++ b/zero-module.yml
@@ -69,7 +69,7 @@ parameters:
   - field: cacheStore
     label: "Cache store to use (default: no cache)"
     options:
-      - ""
+      - "none"
       - "redis"
       - "memcached"
   - field: loggingType
