--- a/zero-module.yml
+++ b/zero-module.yml
@@ -49,9 +49,9 @@ parameters:
   - field: region
     label: Select AWS Region
     options:
-      "us-west-2": "us-west-2"
-      "us-east-1": "us-east-1"
-      "us-east-2": "us-east-2"
+      "us-west-2": "us-west-2 (Oregon)"
+      "us-east-1": "us-east-1 (N. Virginia)"
+      "us-east-2": "us-east-2 (Ohio)"
   - field: productionHostRoot
     label: Production Root Host Name (e.g. mydomain.com) - this must be the root of the chosen domain, not a subdomain.
     fieldValidation:
