zero apply to allow aws profiles as well
if profile points to a source_profile with role_arn,
theres no access_key but terraform aws provider will still work

--- a/templates/Makefile
+++ b/templates/Makefile
@@ -25,7 +25,7 @@ apply-shared-remote-state:
 	rm ./terraform.tfstate )
 
 apply-secrets:
-	aws secretsmanager describe-secret --secret-id "$(PROJECT)-$(ENVIRONMENT)-rds-<% index .Params `randomSeed` %>" > /dev/null 2>&1 || ( \
+	aws secretsmanager describe-secret --region $(AWS_DEFAULT_REGION) --secret-id "$(PROJECT)-$(ENVIRONMENT)-rds-<% index .Params `randomSeed` %>" > /dev/null 2>&1 || ( \
 	cd terraform/bootstrap/secrets && \
 	terraform init && \
 	terraform apply $(AUTO_APPROVE) --var "sendgrid_api_key=${sendgridApiKey}" --var "slack_api_key=${notificationServiceSlackApiKey}"&& \
