--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: hashicorp/setup-terraform@v1
       with:
-        terraform_version: 0.14.8 # Required as of Apr 15 2021 because of breaking changes in tf 0.15
+        terraform_version: 1.0.1
 
     - name: Install Zero
       id: install_zero
