--- a/.github/workflows/doc-site.yml
+++ b/.github/workflows/doc-site.yml
@@ -10,7 +10,7 @@ on:
 env:
   region: us-west-2
   s3_sync_path: /docs/modules/aws-eks-stack
-  BUILD_DOMAIN: staging.getzero.dev
+  BUILD_DOMAIN: ${{ secrets.ZERO_DOC_SITE_DOMAIN_NAME }}
 jobs:
   build:
     runs-on: ubuntu-latest
