added cloudtrailEnable option to fix #173

--- a/tests/fixtures/test-project/zero-project.yml
+++ b/tests/fixtures/test-project/zero-project.yml
@@ -10,6 +10,7 @@ modules:
       accountId: "123456781234"
       database: mysql
       fileUploads: "no"
+      cloudtrailEnable: "yes"
       loggingType: kibana
       metricsType: prometheus
       productionBackendSubdomain: api.
