Serverless initial implementation [MAJOR] (#250)
* serverless initial commit

* feat: Initial changes to module, docs, and apply process for serverless

* move sam policy out into user_access files

* small syntax fixes

* add security group and VPC connection for lambda

* create user-db from lambda instead of k8s

* support database list and mysql

* App secret name from /kubernetes to /application

* fix wrong env-var and unnecessary escape

* split route53 and loggroup IAM permissions

* Move k8s auth out of infra terraform (#246)

* refactor: move k8s auth out of infra terraform and into kubernetes

* fix: removed a couple leftover reference to k8s in infrastructure tf

* fix: fix name of var and tf typo

* fix: made variable name more clear

* fix: remove unnecessary merge

* fix: misc fixes, plus added some deps to avoid race conditions

* fix: bump eks and user_access module versions

* fix: Add missing vars in prod/main.tf

* add some documentation around setting up auth0

* work in progress diagrams for serverless

* template out auth0 due to provider constrains

* more documentation around serverless

* better naming and adding comments

* fix syntax error in user_access.tf

* fix some prod deployment problems

* fixes secret prefix and assumable roles

* fixes around roles and permissions

* update diagrams

* makefile and typo fixes

* bump user_auth for secret creation conflict

Co-authored-by: Bill Monkman <bmonkman@gmail.com>

--- a/templates/Makefile
+++ b/templates/Makefile
@@ -8,7 +8,9 @@ KUBE_CONTEXT := $(PROJECT)-$(ENVIRONMENT)-$(AWS_DEFAULT_REGION)
 
 .EXPORT_ALL_VARIABLES:
 
-apply: apply-remote-state apply-shared-remote-state apply-secrets apply-shared-env apply-env update-k8s-conf pre-k8s apply-k8s-utils post-apply-setup
+apply: apply-remote-state apply-shared-remote-state apply-secrets apply-shared-env apply-env update-k8s-conf-creator pre-k8s apply-k8s-utils post-apply-setup
+
+apply-without-eks: apply-remote-state apply-shared-remote-state apply-secrets apply-shared-env apply-env post-apply-setup
 
 apply-remote-state:
 	aws s3 ls $(PROJECT)-$(ENVIRONMENT)-terraform-state > /dev/null 2>&1 || ( \
@@ -28,7 +30,8 @@ apply-secrets:
 	aws secretsmanager describe-secret --secret-id "$(PROJECT)-$(ENVIRONMENT)-rds-<% index .Params `randomSeed` %>" > /dev/null 2>&1 || ( \
 	cd terraform/bootstrap/secrets && \
 	terraform init && \
-	terraform apply $(AUTO_APPROVE) --var "sendgrid_api_key=${sendgridApiKey}" --var "slack_api_key=${notificationServiceSlackApiKey}" --var "twilio_account_id=${notificationServiceTwilioAccountId}"  --var "twilio_auth_token=${notificationServiceTwilioAuthToken}"&& \
+	terraform apply $(AUTO_APPROVE) --var "sendgrid_api_key=${sendgridApiKey}" --var "slack_api_key=${notificationServiceSlackApiKey}" --var "twilio_account_id=${notificationServiceTwilioAccountId}"  --var "twilio_auth_token=${notificationServiceTwilioAuthToken}" \
+	--var "productionAuth0TenantDoamin=${productionAuth0TenantDoamin}" --var "productionAuth0TenantClientId=${productionAuth0TenantClientId}" --var "productionAuth0TenantClientSecret=${productionAuth0TenantClientSecret}"  --var "stagingAuth0TenantDoamin=${stagingAuth0TenantDoamin}" --var "stagingAuth0TenantClientId=${stagingAuth0TenantClientId}" --var "stagingAuth0TenantClientSecret=${stagingAuth0TenantClientSecret}"&& \
 	rm ./terraform.tfstate )
 
 apply-shared-env:
@@ -45,17 +48,24 @@ pre-k8s:
 	cd scripts && sh pre-k8s.sh
 
 apply-k8s-utils:
+	# Import the aws-auth configmap into the state if it doesn't yet exist. EKS creates this automatically
 	cd kubernetes/terraform/environments/$(ENVIRONMENT) && \
 	terraform init && \
+	(terraform state show module.kubernetes.kubernetes_config_map.aws_auth > /dev/null || (terraform plan && terraform refresh && terraform import module.kubernetes.kubernetes_config_map.aws_auth kube-system/aws-auth)) && \
 	terraform apply $(AUTO_APPROVE)
 
 update-k8s-conf:
 	aws eks --region $(AWS_DEFAULT_REGION) update-kubeconfig --role "arn:aws:iam::<% index .Params `accountId` %>:role/$(PROJECT)-kubernetes-$(ROLE)-$(ENVIRONMENT)" --name $(KUBE_CONTEXT) --alias $(KUBE_CONTEXT)
 
+update-k8s-conf-creator:
+	aws eks --region $(AWS_DEFAULT_REGION) update-kubeconfig --role "arn:aws:iam::<% index .Params `accountId` %>:role/$(PROJECT)-eks-cluster-creator" --name $(KUBE_CONTEXT) --alias $(KUBE_CONTEXT)-creator
+
 post-apply-setup:
 	cd scripts && bash post-apply.sh
 
 teardown: teardown-k8s-utils teardown-env teardown-shared-env teardown-secrets teardown-remote-state teardown-shared-remote-state
+
+teardown-without-eks: teardown-env teardown-shared-env teardown-secrets teardown-remote-state teardown-shared-remote-state
 
 teardown-remote-state:
 	@echo "Deleting remote state is not reversible, are you sure you want to delete the resources? [y/N]:" ; read ans ; [ $${ans:-N} == "y" ] || exit 1
